Keep Dados Complementares open and fix delete permissions

--- a/gestao/templates/admin_custom/form_aeroporto.html
+++ b/gestao/templates/admin_custom/form_aeroporto.html
@@ -3,6 +3,7 @@
 {% block title %}{% if form.instance.pk %}Editar Aeroporto{% else %}Novo Aeroporto{% endif %}{% endblock %}
 {% block header_title %}{% if form.instance.pk %}Editar Aeroporto{% else %}Novo Aeroporto{% endif %}{% endblock %}
 {% block menu_aeroportos %}bg-zinc-700 text-white{% endblock %}
+{% block dados_complementares_open %}open{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
 {% endblock %}
