--- a/gestao/templates/admin_custom/form_companhia_aerea.html
+++ b/gestao/templates/admin_custom/form_companhia_aerea.html
@@ -3,6 +3,7 @@
 {% block title %}{% if form.instance.pk %}Editar Companhia{% else %}Nova Companhia{% endif %}{% endblock %}
 {% block header_title %}Companhias Aéreas{% endblock %}
 {% block menu_companhias %}bg-zinc-700 text-white{% endblock %}
+{% block dados_complementares_open %}open{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
 {% endblock %}
