--- a/gestao/templates/admin_custom/aeroportos.html
+++ b/gestao/templates/admin_custom/aeroportos.html
@@ -2,6 +2,7 @@
 {% block title %}Aeroportos{% endblock %}
 {% block header_title %}Aeroportos{% endblock %}
 {% block menu_aeroportos %}bg-zinc-700 text-white{% endblock %}
+{% block dados_complementares_open %}open{% endblock %}
 {% block content %}
 <div class="flex justify-between items-center mb-6 flex-wrap gap-4">
     <form method="get" class="flex gap-3">
