--- a/gestao/templates/admin_custom/form_programa.html
+++ b/gestao/templates/admin_custom/form_programa.html
@@ -3,6 +3,7 @@
 {% block title %}{% if form.instance.pk %}Editar Programa{% else %}Novo Programa{% endif %}{% endblock %}
 {% block header_title %}{% if form.instance.pk %}Editar Programa{% else %}Novo Programa{% endif %}{% endblock %}
 {% block menu_programas %}bg-zinc-700 text-white{% endblock %}
+{% block dados_complementares_open %}open{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
 {% endblock %}
