feat: update access control and user forms

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -15,8 +15,8 @@
     {% endif %}
     <form method="POST">
         {% csrf_token %}
-        <label>Usuário:</label>
-        <input type="text" name="username" required><br>
+        <label>CPF:</label>
+        <input type="text" name="cpf" required><br>
         <label>Senha:</label>
         <input type="password" name="password" required><br>
         <label>Tipo de acesso:</label>
