--- a/painel_cliente/templates/registration/login.html
+++ b/painel_cliente/templates/registration/login.html
@@ -101,8 +101,8 @@
 
     <form method="post">
       {% csrf_token %}
-      <label for="id_username">{{ form.username.label }}</label>
-      {{ form.username }}
+      <label for="id_cpf">{{ form.cpf.label }}</label>
+      {{ form.cpf }}
 
       <label for="id_password">{{ form.password.label }}</label>
       {{ form.password }}
