--- a/gestao/templates/sem_permissao.html
+++ b/gestao/templates/sem_permissao.html
@@ -2,5 +2,5 @@
 {% block title %}Sem Permissão{% endblock %}
 {% block header_title %}Sem Permissão{% endblock %}
 {% block content %}
-<div class="alert alert-warning text-center">Você não tem permissão para acessar esta funcionalidade.</div>
+<div class="alert alert-warning text-center">Você não tem permissão para acessar essa funcionalidade.</div>
 {% endblock %}
