--- a/painel_cliente/templates/registration/login.html
+++ b/painel_cliente/templates/registration/login.html
@@ -101,8 +101,8 @@
 
     <form method="post">
       {% csrf_token %}
-      <label for="id_username">{{ form.username.label }}</label>
-      {{ form.username }}
+      <label for="id_identifier">{{ form.identifier.label }}</label>
+      {{ form.identifier }}
 
       <label for="id_password">{{ form.password.label }}</label>
       {{ form.password }}
@@ -110,8 +110,9 @@
       <label for="tipo_acesso">Tipo de Acesso</label>
       <select name="tipo_acesso" id="tipo_acesso">
         <option value="cliente">Cliente</option>
-        <option value="admin">Administrador</option>
         <option value="operador">Operador</option>
+        <option value="admin">Administrador</option>
+        <option value="superadmin">Super Admin</option>
       </select>
 
       <input type="submit" value="Entrar">
