Mover cálculo de dashboard para utilitário

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -20,11 +20,10 @@
         <label>Senha:</label>
         <input type="password" name="password" required><br>
         <label>Tipo de acesso:</label>
-        <select name="perfil" required>
+        <select name="access_type" required>
             <option value="cliente">Cliente</option>
             <option value="operador">Operador</option>
             <option value="admin">Administrador</option>
-            <option value="superadmin">Super Admin</option>
         </select><br><br>
         <button type="submit">Entrar</button>
     </form>
