Simplify admin and user management

--- a/accounts/templates/accounts/user_form.html
+++ b/accounts/templates/accounts/user_form.html
@@ -24,6 +24,26 @@
       <label class="form-label" for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
       {{ form.password }}
     </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.acesso_ate.id_for_label }}">{{ form.acesso_ate.label }}</label>
+      {{ form.acesso_ate }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.empresa.id_for_label }}">{{ form.empresa.label }}</label>
+      {{ form.empresa }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.nova_empresa_nome.id_for_label }}">{{ form.nova_empresa_nome.label }}</label>
+      {{ form.nova_empresa_nome }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.limite_operadores.id_for_label }}">{{ form.limite_operadores.label }}</label>
+      {{ form.limite_operadores }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.limite_clientes.id_for_label }}">{{ form.limite_clientes.label }}</label>
+      {{ form.limite_clientes }}
+    </div>
     <div class="form-actions">
       <button type="submit" class="btn-primary">Salvar</button>
     </div>
