--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,30 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Plataforma FPP</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <h2>Login</h2>
-    {% if messages %}
-      <ul>
-        {% for message in messages %}
-          <li style="color:red">{{ message }}</li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-    <form method="POST">
-        {% csrf_token %}
-        <label>Usuário/CPF:</label>
-        <input type="text" name="identifier" required><br>
-        <label>Senha:</label>
-        <input type="password" name="password" required><br>
-        <label>Tipo de acesso:</label>
-        <select name="perfil" required>
-            <option value="cliente">Cliente</option>
-            <option value="operador">Operador</option>
-            <option value="admin">Administrador</option>
-            <option value="superadmin">Super Admin</option>
-        </select><br><br>
-        <button type="submit">Entrar</button>
-    </form>
+    <div class="login-container">
+        <div class="login-box">
+            <div class="logo">NC<span>fly</span></div>
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <li class="error-message">{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            <form method="POST">
+                {% csrf_token %}
+                <label>Usuário/CPF:</label>
+                <input type="text" name="identifier" required>
+                <label>Senha:</label>
+                <input type="password" name="password" required>
+                <label>Tipo de acesso:</label>
+                <select name="perfil" required>
+                    <option value="cliente">Cliente</option>
+                    <option value="operador">Operador</option>
+                    <option value="admin">Administrador</option>
+                    <option value="superadmin">Super Admin</option>
+                </select>
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
