--- a/accounts/templates/accounts/user_form.html
+++ b/accounts/templates/accounts/user_form.html
@@ -13,8 +13,16 @@
       {{ form.nome_completo }}
     </div>
     <div class="form-group single">
-      <label class="form-label" for="{{ form.cpf.id_for_label }}">{{ form.cpf.label }}</label>
-      {{ form.cpf }}
+      <label class="form-label" for="{{ form.tipo_documento.id_for_label }}">{{ form.tipo_documento.label }}</label>
+      {{ form.tipo_documento }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.documento.id_for_label }}">{{ form.documento.label }}</label>
+      {{ form.documento }}
+    </div>
+    <div class="form-group single">
+      <label class="form-label" for="{{ form.data_expiracao.id_for_label }}">{{ form.data_expiracao.label }}</label>
+      {{ form.data_expiracao }}
     </div>
     <div class="form-group single">
       <label class="form-label" for="{{ form.perfil.id_for_label }}">{{ form.perfil.label }}</label>
