--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -37,6 +37,7 @@
                 <div class="mt-2 ml-4 flex flex-col space-y-2">
                     <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700 {% block menu_auditoria %}{% endblock %}" href="{% url 'admin_auditoria' %}">Auditoria</a>
                     <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'user_list' %}">Usuários da Empresa</a>
+                    <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'alterar_senha' %}">Alterar Senha</a>
                 </div>
             </details>
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'logout' %}">Sair</a>
