--- a/superadmin/templates/superadmin/base_superadmin.html
+++ b/superadmin/templates/superadmin/base_superadmin.html
@@ -17,6 +17,7 @@
         <nav class="flex flex-col space-y-2">
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'superadmin_empresa_list' %}">Empresas</a>
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'superadmin_administrador_create' %}">Novo Administrador</a>
+            <a href="{% url 'superadmin_administrador_list' %}">Ver Administradores</a>
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'superadmin_operador_create' %}">Novo Operador</a>
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'superadmin_cliente_create' %}">Novo Cliente</a>
             <a class="block px-3 py-2 rounded text-blue-400 hover:bg-zinc-700" href="{% url 'logout' %}">Sair</a>
