--- a/painel_cliente/templates/painel_cliente/inativo.html
+++ b/painel_cliente/templates/painel_cliente/inativo.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Acesso Bloqueado</title>
+    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
 </head>
-<body style="background:#181c25;color:#fff;font-family:Arial, sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;">
-    <div style="text-align:center;">
+<body>
+    <div class="container" style="text-align:center;">
         <h1>Conta Inativa</h1>
         <p>Seu acesso foi bloqueado. Entre em contato com o administrador.</p>
     </div>
