--- a/painel_cliente/templates/painel_cliente/hoteis.html
+++ b/painel_cliente/templates/painel_cliente/hoteis.html
@@ -4,46 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emissões de Hotéis</title>
-    <link rel="stylesheet" href="{% static 'gestao/styles.css' %}">
-    <style>
-        body {
-            background: #181c25;
-            color: #fff;
-            font-family: 'Segoe UI', Arial, sans-serif;
-        }
-        .container {
-            max-width: 1080px;
-            margin: 32px auto;
-            padding: 0 16px;
-        }
-        h1 {
-            color: #f8d16c;
-            margin-bottom: 24px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: #23263a;
-            border-radius: 12px;
-            overflow: hidden;
-            margin-bottom: 32px;
-            box-shadow: 0 1px 8px #0002;
-        }
-        th, td {
-            padding: 14px 10px;
-            text-align: left;
-        }
-        th {
-            background: #23263a;
-            color: #f8d16c;
-        }
-        tr {
-            border-bottom: 1px solid #313455;
-        }
-        td {
-            color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
 </head>
 <body>
     <div class="container">
@@ -71,11 +32,11 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="6" style="text-align:center;color:#f8d16c;">Nenhuma emissão encontrada.</td>
+                    <td colspan="6" style="text-align:center;">Nenhuma emissão encontrada.</td>
                 </tr>
                 {% endfor %}
             </tbody>
-            <tfoot> 
+            <tfoot>
         </table>
     </div>
 </body>
