--- a/painel_cliente/templates/painel_cliente/login.html
+++ b/painel_cliente/templates/painel_cliente/login.html
@@ -4,23 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
 </head>
 <body>
-    <h2>Entrar</h2>
-    {% if form.errors %}
-        <p style="color: red;">Usuário ou senha incorretos. Tente novamente.</p>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            <label for="id_username">Usuário:</label>
-            {{ form.username }}
-        </div>
-        <div>
-            <label for="id_password">Senha:</label>
-            {{ form.password }}
-        </div>
-        <button type="submit">Entrar</button>
-    </form>
+    <div class="login-container">
+        <h2>Entrar</h2>
+        {% if form.errors %}
+            <p class="erro">Usuário ou senha incorretos. Tente novamente.</p>
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            <div>
+                <label for="id_username">Usuário:</label>
+                {{ form.username }}
+            </div>
+            <div>
+                <label for="id_password">Senha:</label>
+                {{ form.password }}
+            </div>
+            <button type="submit">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
