--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,35 +5,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - NCfly</title>
-  <link rel="stylesheet" href="{% static 'gestao/css/login.css' %}" />
+  <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}" />
 </head>
 <body>
-  <div class="login-wrapper">
-    <div class="login-card">
-      <div class="logo">NC<span>fly</span> ✈️</div>
-      <h1>Bem-vindo ao NCfly</h1>
-      {% if messages %}
-      <ul class="messages">
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
-      <form method="POST">
-        {% csrf_token %}
-        <label for="username">Username</label>
-        <input type="text" id="username" name="identifier" placeholder="Digite seu usuário" required />
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Digite sua senha" required />
-        <label for="perfil">Tipo de Acesso</label>
-        <select id="perfil" name="perfil" required>
-          <option value="cliente">Cliente</option>
-          <option value="operador">Operador</option>
-          <option value="admin">Admin</option>
-          <option value="superadmin">Super Admin</option>
-        </select>
-        <button type="submit">Entrar</button>
-      </form>
+   <div class="login-container">
+    <h2>Bem-vindo ao NCfly</h2>
+    {% if messages %}
+    <div class="erro">
+      {% for message in messages %}
+      {{ message }}<br />
+      {% endfor %}
+    </div>
+    {% endif %}
+    <form method="POST">
+      {% csrf_token %}
+      <label for="username">Usuário/CPF</label>
+      <input type="text" id="username" name="identifier" placeholder="Digite seu usuário" required />
+      <label for="password">Senha</label>
+      <input type="password" id="password" name="password" placeholder="Digite sua senha" required />
+      <label for="perfil">Tipo de Acesso</label>
+      <select id="perfil" name="perfil" required>
+        <option value="cliente">Cliente</option>
+        <option value="operador">Operador</option>
+        <option value="admin">Administrador</option>
+        <option value="superadmin">Super Admin</option>
+      </select>
+      <button type="submit">Entrar</button>
+    </form>
     </div>
   </div>
 </body>
